small fix for the error page