@@ -31,7 +31,7 @@ public class ErrorServlet extends HttpServlet {
 
     private final static String PARAM_JSONRPCERRORCODE = "jrpcerrorcd";
 
-    private final static Map<String,String> PREFIX = ImmutableMap.of(
+    private final static Map<String,String> PREFIX = Map.of(
             NaturalLanguage.CODE_ENGLISH, "Oh darn!",
             NaturalLanguage.CODE_GERMAN, "Herrje!",
             NaturalLanguage.CODE_JAPANESE, "もう!",
@@ -39,7 +39,7 @@ public class ErrorServlet extends HttpServlet {
             NaturalLanguage.CODE_SLOVAK, "Sakra!",
             NaturalLanguage.CODE_SPANISH, "¡Oh rayos!");
 
-    private final static Map<String,String> BODY_GENERAL = ImmutableMap.of(
+    private final static Map<String,String> BODY_GENERAL = Map.of(
             NaturalLanguage.CODE_ENGLISH, "Something has gone wrong with your use of this web application.",
             NaturalLanguage.CODE_GERMAN, "Mit dieser Web-Anwendung ist was schief gegangen.",
             NaturalLanguage.CODE_JAPANESE, "このWebアプリケーションの使い方が何かおかしい。",
@@ -47,7 +47,7 @@ public class ErrorServlet extends HttpServlet {
             NaturalLanguage.CODE_SLOVAK, "Niečo sa pokazilo počas vašej práce s touto webovou aplikáciou.",
             NaturalLanguage.CODE_SPANISH, "Algo ha salido mal mientras usaba esta aplicación web.");
 
-    private final static Map<String,String> BODY_NOTFOUND = ImmutableMap.of(
+    private final static Map<String,String> BODY_NOTFOUND = Map.of(
             NaturalLanguage.CODE_ENGLISH, "The requested resource was not found.",
             NaturalLanguage.CODE_GERMAN, "Die angefragte Ressource wurde nicht gefunden.",
             NaturalLanguage.CODE_JAPANESE, "要求されたリソースが見つかりません。",
@@ -55,7 +55,7 @@ public class ErrorServlet extends HttpServlet {
             NaturalLanguage.CODE_SLOVAK, "Požadovaný zdroj nebol nájdený.",
             NaturalLanguage.CODE_SPANISH, "El recurso solicitado no se ha encontrado.");
 
-    private final static Map<String,String> BODY_AUTHORIZATIONFAILURE = ImmutableMap.of(
+    private final static Map<String,String> BODY_AUTHORIZATIONFAILURE = Map.of(
             NaturalLanguage.CODE_ENGLISH, "Your authentication with the service is expired or you have reached a page that is not accessible with the level of your permissions.",
             NaturalLanguage.CODE_GERMAN, "Die Berechtigungen für diesen Dienst sind abgelaufen, oder der Zugang zur angeforderten Seite erfordert zusätzliche Zugriffsrechte.",
             NaturalLanguage.CODE_JAPANESE, "サービスの認証が期限切れか，またはユーザーの権限では入れないページに触れた。",
@@ -63,7 +63,7 @@ public class ErrorServlet extends HttpServlet {
             NaturalLanguage.CODE_SLOVAK, "Vaša autentifikácia u tejto služby buď vypršala alebo ste narazili na stránku, ktorá nie je prístupná pri vašej úrovni oprávnení.",
             NaturalLanguage.CODE_SPANISH, "La autenticación con el servicio ha expirado o ha llegado a una página que no puede acceder con su nivel de permisos.");
 
-    private final static Map<String,String> ACTION = ImmutableMap.of(
+    private final static Map<String,String> ACTION = Map.of(
             NaturalLanguage.CODE_ENGLISH, "Start again",
             NaturalLanguage.CODE_GERMAN, "Neu starten",
             NaturalLanguage.CODE_JAPANESE, "再開",
